# code-wrapped

./: .gitignore  COMPARISON_REPORT.md  README.md  debug_claude_parser.py  debug_exception.py  debug_session_counting.py  debug_single_file.py  pyproject.toml  test_comparison.py
docs/specs/: code-wrapped.md
src/code_wrapped/: __init__.py  cli.py  stats.py
src/code_wrapped/enrichment/: __init__.py  archetypes.py  awards.py  fingerprint.py  topics.py  vibes.py
src/code_wrapped/narrative/: __init__.py  insights.py  story.py
src/code_wrapped/output/: __init__.py  report.py
src/code_wrapped/output/templates/: wrapped.html
src/code_wrapped/parsers/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py
src/code_wrapped/viz/: __init__.py  cards.py  charts.py
tests/: __init__.py  test_enrichment.py  test_narrative.py  test_parsers.py  test_stats.py  test_viz.py
tests/fixtures/claude/: sample_session.jsonl
tests/fixtures/codex/: sample_session.json
