[project]
name = "code-wrapped"
version = "0.1.0"
description = "Your AI Coding Year in Review - Spotify Wrapped for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "pillow>=10.0",
    "plotly>=5.15",
    "kaleido>=0.2",  # For plotly image export
    "numpy>=1.24",   # Required by plotly
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]
llm = [
    "anthropic>=0.30",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
code-wrapped = "code_wrapped.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
